@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.2 on Sun Oct 03 00:12:45 2004 -->
+<!-- generated by wxGlade 0.3.2 on Sun Oct 03 22:02:55 2004 -->
 
 <application path="../../resources/dialogs/misccontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
     <object class="wxPanel" name="MiscControlPage" base="EditTopLevelPanel">
@@ -547,7 +547,8 @@
                                                         <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
                                                         <border>5</border>
                                                         <option>1</option>
-                                                        <object class="wxComboBox" name="combo_box_1" base="EditComboBox">
+                                                        <object class="wxComboBox" name="PrinterportSelector" base="EditComboBox">
+                                                            <style>wxCB_READONLY</style>
                                                             <selection>0</selection>
                                                             <choices>
                                                                 <choice>choice 1</choice>
@@ -601,16 +602,16 @@
                                                         <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
                                                         <border>5</border>
                                                         <option>1</option>
-                                                        <object class="wxTextCtrl" name="text_ctrl_1" base="EditTextCtrl">
+                                                        <object class="wxTextCtrl" name="PrinterLogFile" base="EditTextCtrl">
                                                         </object>
                                                     </object>
                                                     <object class="sizeritem">
                                                         <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
                                                         <border>5</border>
                                                         <option>0</option>
-                                                        <object class="wxButton" name="button_1" base="EditButton">
+                                                        <object class="wxButton" name="BrowsePrinterLog" base="EditButton">
                                                             <label>...</label>
-                                                            <size>40, -1</size>
+                                                            <size>25, -1</size>
                                                         </object>
                                                     </object>
                                                 </object>
