@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.1 on Sat Oct  2 22:26:45 2004 -->
+<!-- generated by wxGlade 0.3.2 on Sun Oct 03 22:03:35 2004 -->
 
-<application path="../../resources/dialogs/videocontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0">
+<application path="../../resources/dialogs/videocontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
     <object class="wxPanel" name="VideoControlPage" base="EditTopLevelPanel">
         <style>wxTAB_TRAVERSAL</style>
         <object class="wxBoxSizer" name="VideoControlsSizer" base="EditBoxSizer">
@@ -743,7 +743,7 @@
                                         <object class="wxButton" name="BrowseScreenShotButton" base="EditButton">
                                             <tooltip>Browse</tooltip>
                                             <label>...</label>
-                                            <size>20, -1</size>
+                                            <size>25, -1</size>
                                         </object>
                                     </object>
                                     <object class="sizeritem">
